--- a/src/styles/colors/common.module.scss
+++ b/src/styles/colors/common.module.scss
@@ -30,6 +30,7 @@ $successLight: #7DDBB1;
 
 // Grey
 $grey50: #F5F7F7;
+$grey200: #EEEEEE;
 $grey300: #E0E0E0;
 
 :export {
@@ -58,6 +59,7 @@ $grey300: #E0E0E0;
   successDark: $successDark;
   successLight: $successLight;
   // grey
-  grey50: $grey300;
+  grey50: $grey50;
+  grey200: $grey200;
   grey300: $grey300;
 }
